links to stock info - fixed

--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -45,11 +45,11 @@
             </div>
             <div class="page-title-actions">
                 <div>
-                    <div class="mb-2 mr-2 badge badge-info">Go to Yahoo</div>
+                    <div class="mb-2 mr-2 badge badge-info"><a target="_blank" href="https://finance.yahoo.com/quote/{{candidate.ticker}}">Go to Yahoo</a></div>
                 </div>
 
                 <div>
-                    <div class="mb-2 mr-2 badge badge-info">Go Tiprank</div>
+                    <div  class="mb-2 mr-2 badge badge-info"><a target="_blank" href="https://www.tipranks.com/stocks/{{candidate.ticker}}/forecast">Go Tiprank</a></div>
                 </div>
             </div>
         </div>
