--- a/app/templates/userview/closedpositions.html
+++ b/app/templates/userview/closedpositions.html
@@ -46,7 +46,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                {% for m in positions | sort(attribute='closed') %}
+                {% for m in positions | sort(attribute='closed' , reverse = True) %}
                 <tr>
                     <td>
                         <a href="{{url_for('candidates.info')}}?ticker_to_show={{ m.ticker }}">
@@ -65,8 +65,20 @@
                     <td>{{ m.closed }}</td>
                     <td>{{ m.open_price }}</td>
                     <td>{{ m.close_price }}</td>
-                    <td>{{ "%.1f"|format(m.profit) }}</td>
-                    <td>{{ "%.1f"|format(m.profit/(m.open_price*m.stocks)*100) }}</td>
+                    <td
+                    {%if m.profit>0%}
+                    style="background-color: chartreuse;"
+                        {%else%}
+                        style="background-color: coral"
+                        {%endif%}
+                    >{{ "%.1f"|format(m.profit) }}</td>
+                    <td
+                    {%if m.profit>0%}
+                    style="background-color: chartreuse;"
+                        {%else%}
+                        style="background-color: coral"
+                        {%endif%}
+                    >{{ "%.1f"|format(m.profit/(m.open_price*m.stocks)*100) }}</td>
 
 
                 </tr>
