started time added to report page

--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -35,6 +35,11 @@
                         report.last_worker_execution_text }}
                     </div>
                 </div>
+                <div>
+                    <div id="started_time" class="mb-2 mr-2 badge badge-pill badge-secondary">Started time : {{
+                        report.started_time_text }}
+                    </div>
+                </div>
             </div>
             <div class="page-title-actions">
                 <div>
