shows stats on position open - hopefully :)

--- a/app/templates/userview/closed_position_info.html
+++ b/app/templates/userview/closed_position_info.html
@@ -26,6 +26,8 @@
             <input type="hidden" id="closed" value="{{ position.closed }}">
             <input type="hidden" id="opened" value="{{ position.opened }}">
             <input type="hidden" id="profit" value="{{ position.profit }}">
+            <input type="hidden" id="fmp_rating_on_buy" value="{{ fmp_rating_on_buy }}">
+            <input type="hidden" id="tip_rank_on_buy" value="{{ tip_rank_on_buy }}">
 
         </div>
 
