trading session is updated

--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -47,7 +47,7 @@
                 </div>
 
                 <div>
-                    <div class="mb-2 mr-2 badge badge-info">US market : {{ report.market_state }}</div>
+                    <div class="mb-2 mr-2 badge badge-info">US market : {{ trading_session_state }}</div>
                 </div>
             </div>
         </div>
