small fix for the letter

--- a/app/templates/account/email/research_issue.html
+++ b/app/templates/account/email/research_issue.html
@@ -1,1 +1,1 @@
-<p>There was an issue updating info for a ticker above: {{ ticker }}. Please go to Admin section and investigate - or turn it off.</p>>
+<p>There was an issue updating info for a ticker above: {{ ticker }}. Please go to Admin section and investigate - or turn it off.</p>
